--- a/src/theme/other.scss
+++ b/src/theme/other.scss
@@ -34,3 +34,10 @@
 	--w-e-modal-button-bg-color: var(--el-color-primary) !important;
 	--w-e-modal-button-border-color: var(--el-color-primary) !important;
 }
+.avue-content {
+	padding: 15px 15px 5px 15px;
+}
+.avue-crud {
+	padding: 10px;
+	background: #ffffff;
+}
